# PhotoC

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ExampleOfButton.md  Makefile  PhotoC.pro  benchmark.sh  build.sh  cmake_install.cmake  context.c  field_of_view  field_of_view.pro  main.c  main.cpp  moc_window.cpp_parameters  photoc  samples.h  window.cpp  window.h
GPhoto Scripts/: interval-exposure.sh  tmpfileuokXD6
field_of_view_autogen/EWIEGA46WW/: moc_window.cpp
src/: CMakeLists.txt  main.cpp
src/benchmarks/: blending_benchmarks.cpp
src/blending/src/: BrightenStacker.cpp  BrightenStacker.h  CMakeLists.txt  MeanStacker.cpp  MeanStacker.h  MedianStacker.cpp  MedianStacker.h  blending_common.cpp  blending_common.h  common.cpp  common.h
src/blending/tests/: stacking_tests.cpp
src/camera/src/: CMakeLists.txt  camera.cpp  camera.h  camera_util.cpp  camera_util.h
src/camera/tests/: parsing_tests.cpp
src/common/src/: CMakeLists.txt  normalization.cpp  normalization.h
src/io/src/: CMakeLists.txt  files.cpp  files.h
src/io/tests/: filetests.cpp
src/processing/src/: CMakeLists.txt  canvasmanager.cpp  canvasmanager.h  processing.cpp  processing.h  utilities.cpp  utilities.h
src/processing/tests/: canvas_tests.cpp  composite_tests.cc  composite_tests.cpp
src/processing/tests/benchmarks/: blending_benchmarks.cpp
src/processing/tests/scripts/: naive_composites.py  subtract_mask.py
src/tests/src/: CMakeLists.txt  common_tests.cpp  common_tests.h  loaders.cpp  loaders.h
src/ui/src/: CMakeLists.txt  ImageViewer.cpp  ImageViewer.h  LongExposureConfig.cpp  LongExposureConfig.h  LongExposureDetails.cpp  LongExposureDetails.h  LongExposureStructures.h  TimeEdit.cpp  TimeEdit.h  app_resources.qrc  canvaswidget.cpp  canvaswidget.h  compositeselection.cpp  compositeselection.h  fileSelector.cpp  fileSelector.h  mainwindow.cpp  mainwindow.h  utilities.cpp  utilities.h  window.cpp  window.h
